--- a/app/views/todo_items/index.html.erb
+++ b/app/views/todo_items/index.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
     <% @items.each do |item| %>
-        <li><%= item.description %></li>
+        <li><%= link_to todo_item_title_status(item), edit_todo_item_path(item) %></li>
     <% end %>
 </ul>
 
