--- a/app/views/todo_items/index.html.erb
+++ b/app/views/todo_items/index.html.erb
@@ -1,5 +1,12 @@
 <h1>Todo Items</h1>
 
+<% if @filter_items %>
+    <p>Showing only pending items</p>
+
+<% else %>
+    <p><a href="?filter=pending">Show only pending items</a></p>
+<% end %>
+
 <ul>
     <% @items.each do |item| %>
         <li><%= link_to todo_item_title_status(item), edit_todo_item_path(item) %></li>
