--- a/app/assets/stylesheets/todo_items.scss
+++ b/app/assets/stylesheets/todo_items.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the TodoItems controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+ul#item_list {
+    margin: 2em;
+    list-style-type: square;
+    line-height: 4em;
+}
+
+ul#item_list li {
+    font-size: 2em;
+    margin-left: 2em;
+}
