--- a/app/assets/stylesheets/001_base.css
+++ b/app/assets/stylesheets/001_base.css
@@ -20,6 +20,11 @@ header {
     background-color: #000;
 }
 
+header h1 a:hover {
+    color: #fff;
+    text-decoration: none;
+}
+
 header #align {
     background-color: #222;
     width: 80%;
@@ -63,6 +68,7 @@ header nav a {
 
 header nav a:hover {
     background-color: #444;
+    color: #fff;
     text-decoration: underline;
 }
 
