Todo Lists containing Todo Items feature

--- a/app/views/todo_items/new.html.erb
+++ b/app/views/todo_items/new.html.erb
@@ -6,6 +6,10 @@
         <%= form.text_field :description %>
     </fieldset>
     <fieldset>
+        <%= form.label :todo_list_id %>
+        <%= form.text_field :todo_list_id %>
+    </fieldset>
+    <fieldset>
         <%= form.submit %>
     </fieldset>
 <% end %>
