--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -7,3 +7,5 @@
     <li><%= item.description %></li>
 <% end %>
 </ul>
+
+<%= link_to 'Add New Item...', new_todo_list_todo_item_path(@todo_list) %>
