feature: Visitor can see aspirations

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
           </h1>
           <nav>
             <%= navigation_link root_path, :home, "Home" %>
+            <%= navigation_link aspirations_path, :aspirations, "Aspirations" %>
             <%= navigation_link todo_lists_path, :todo_lists, "Todo Lists" %>
             <%= navigation_link about_path, :about, "About" %>
           </nav>
