--- a/app/views/aspirations/show.html.erb
+++ b/app/views/aspirations/show.html.erb
@@ -1,3 +1,5 @@
 <h1><%= @aspiration.title %></h1>
 
+<p><%= @aspiration.description %></p>
+
 <p><%= link_to 'Edit', edit_aspiration_path(@aspiration) %></p>
