Users can see progress logs feature

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
             <%= navigation_link root_path, :home, "Home" %>
             <%= navigation_link aspirations_path, :aspirations, "Aspirations" %>
             <%= navigation_link todo_lists_path, :todo_lists, "Todo Lists" %>
+            <%= navigation_link progress_logs_path, :progress_logs, 'Progress' %>
             <%= navigation_link about_path, :about, "About" %>
           </nav>
         </div>
