Flash rendering in layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
       </header>
       <main>
         <div id="content">
+          <%= render_flash flash %>
           <%= yield %>
         </div>
       </main>
