feature: Progress log viewing
A user can click on a progress log entry and view its details and if the
progress log has a todo item then a link to that item is rendered

--- a/app/views/progress_logs/index.html.erb
+++ b/app/views/progress_logs/index.html.erb
@@ -6,6 +6,6 @@
 
 <ul id='progress-logs'>
 <% @progress_logs.each do |progress_log| %>
-  <li><%= progress_log_on_day_s(progress_log) %></li>
+  <li><%= link_to progress_log_on_day_s(progress_log), progress_log_path(progress_log) %></li>
 <% end %>
 </ul>
