--- a/app/views/common/404.html.erb
+++ b/app/views/common/404.html.erb
@@ -1,7 +1,9 @@
 <h1>Page or resource not found</h1>
 
-<p>I am sorry but I could not find what you were looking for.</p>
+<div class='page'>
+    <p>I am sorry but I could not find what you were looking for.</p>
 
-<% if @description %>
-<p>Description: <%= @description %></p>
-<% end %>
+    <% if @description %>
+    <p>Description: <%= @description %></p>
+    <% end %>
+</div>
