--- a/app/views/aspirations/edit.html.erb
+++ b/app/views/aspirations/edit.html.erb
@@ -2,16 +2,16 @@
 
 <p><%= button_to 'Delete', aspiration_path(@aspiration), method: :delete %></p>
 
-<%= form_for @aspiration do |form| %>
+<%= form_for @aspiration, html: { class: 'form' } do |form| %>
     <fieldset>
         <%= form.label :title %>
-        <%= form.text_field :title %>
+        <%= form.text_field :title, class: 'text' %>
     </fieldset>
     <fieldset>
         <%= form.label :description %>
-        <%= form.text_area :description %>
+        <%= form.text_area :description, class: 'text' %>
     </fieldset>
-    <fieldset>
-        <%= form.submit 'Save' %>
+    <fieldset class='buttons'>
+        <%= form.submit 'Save', class: 'button' %>
     </fieldset>
 <% end %>
