--- a/app/assets/stylesheets/005_forms.css
+++ b/app/assets/stylesheets/005_forms.css
@@ -17,6 +17,11 @@ form fieldset select {
     width: 100%;
 }
 
+form fieldset input, form fieldset textarea {
+    border: 1px solid #777;
+    border-radius: 3px;
+}
+
 form .text {
     width: 100%;
     font-size: 1.15em;
