--- a/app/views/aspirations/new.html.erb
+++ b/app/views/aspirations/new.html.erb
@@ -4,10 +4,12 @@
     <fieldset>
         <%= form.label :title %>
         <%= form.text_field :title, class: 'text' %>
+        <%= field_errors_for @aspiration, :title %>
     </fieldset>
     <fieldset>
         <%= form.label :description %>
         <%= form.text_area :description, class: 'text' %>
+        <%= field_errors_for @aspiration, :description %>
     </fieldset>
     <fieldset class='buttons'>
         <%= form.submit 'Create', class: 'button' %>
