Navigation menu icons

--- a/app/views/home/root.html.erb
+++ b/app/views/home/root.html.erb
@@ -3,3 +3,9 @@
 <p>
     A small application for managing things to get done. 
 </p>
+
+<!-- 
+HI! I have no clue what I am doing with his. 
+Don't let anyone tell you that they are some kind of super-human.
+Everyone is broken a little.
+-->
