--- a/app/assets/stylesheets/003_nav.css
+++ b/app/assets/stylesheets/003_nav.css
@@ -9,6 +9,7 @@ header nav a {
   margin-right: 5px;
   color: #fff;
   text-decoration: none;
+  vertical-align: middle;
 }
 
 header nav a:hover {
@@ -20,4 +21,9 @@ header nav a:hover {
 header nav a.active {
   background-color: #fff;
   color: #000;
+}
+
+header nav img.icon {
+  width: 1em;
+  margin-right: 0.5em;
 }
