--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -5,6 +5,15 @@
         A small application for managing things to get done. 
     </p>
 
+    <h2>Acknowledgements</h2>
+
+    <p>
+      Icons are from <a href='http://www.gnome.org'>GNOME Project</a>, 
+      specifically <a href='https://gitlab.gnome.org/GNOME/adwaita-icon-theme'>Adwaita</a>.
+    </p>
+
+    <h2>Content</h2>
+
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus orci justo, sodales a posuere blandit, gravida a magna. Cras et aliquet nibh. Cras vel urna at turpis vehicula auctor. Quisque tincidunt libero non massa blandit consectetur. Aenean tincidunt magna odio, quis imperdiet quam aliquam sit amet. Ut fermentum ipsum nec vestibulum ullamcorper. Phasellus nec cursus arcu. Aliquam fermentum mollis neque, eget tempus arcu congue ac. Aenean tortor magna, dapibus eget arcu eu, vehicula vestibulum purus. Cras aliquet et dolor sit amet volutpat. Nunc sollicitudin turpis in fermentum sagittis. Nulla semper justo in tellus malesuada, in ultrices purus dictum. Quisque id finibus sapien. Etiam turpis mauris, condimentum ac nibh nec, fermentum pellentesque massa. Aenean quis pretium risus. Vivamus non mollis erat.
     </p>
