--- a/app/views/aspirations/edit.html.erb
+++ b/app/views/aspirations/edit.html.erb
@@ -7,11 +7,13 @@
         <%= form.label :title %>
         <%= form.text_field :title, class: 'text' %>
         <%= field_errors_for @aspiration, :title %>
+        <%= field_hints :aspiration, :title %>  
     </fieldset>
     <fieldset>
         <%= form.label :description %>
         <%= form.text_area :description, class: 'text' %>
         <%= field_errors_for @aspiration, :description %>
+        <%= field_hints :aspiration, :description %>
     </fieldset>
     <fieldset class='buttons'>
         <%= form.submit 'Save', class: 'button' %>
