--- a/app/views/todo_items/new.html.erb
+++ b/app/views/todo_items/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Add New Todo Item</h1>
 
-<%= form_for @item, url: todo_list_todo_items_path(@todo_list), html: { class: 'form' } do |form| %>
+<%= form_for @item, url: todo_items_path(@todo_list), html: { class: 'form' } do |form| %>
     <fieldset>
         <%= form.label :description %>
         <%= form.text_field :description, class: 'text' %>
