--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
           <nav>
             <%= navigation_link root_path, :home, "Home" %>
             <%= navigation_link aspirations_path, :aspirations, "Aspirations" %>
-            <%= navigation_link todo_lists_path, :todo_lists, "Todo Lists" %>
+            <%= navigation_link todo_index_path, :todo_lists, "Todo Lists" %>
             <%= navigation_link progress_logs_path, :progress_logs, 'Progress' %>
             <%= navigation_link about_path, :about, "About" %>
           </nav>
