Visitors to home page will able to see todo lists

--- a/app/views/home/root.html.erb
+++ b/app/views/home/root.html.erb
@@ -6,6 +6,12 @@
 <% end %>
 </ul>
 
+<ul id='todo-lists'>
+<% @todo_lists.each do |todo_list| %>
+    <li><%= link_to todo_list.title, todo_path(todo_list) %></li>
+<% end %>
+</ul>
+
 <p>
     A small application for managing things to get done. 
 </p>
