Moved CSS to SASS

--- a/app/assets/stylesheets/007_lists.scss
+++ b/app/assets/stylesheets/007_lists.scss
@@ -1,8 +1,8 @@
 ul.index {
     margin-top: 1em;
     padding-left: 1em;
-}
 
-ul.index li {
-    padding-bottom: 1em;
+    li {
+        padding-bottom: 1em;
+    }
 }
