--- a/app/assets/stylesheets/006_main.scss
+++ b/app/assets/stylesheets/006_main.scss
@@ -10,5 +10,11 @@ main {
             font-size: 2.2em;
             margin-bottom: 0.5em;
         }
+
+        h2 {
+            font-size: 1.9em;
+            margin-bottom: 0.4em;
+        }
+
     }
 }
